--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <div style="display: flex; gap: 10px; margin-bottom: 10px">
           <div style="flex: 1">
-            <label for="previousTotal">Previous Total value:</label>
+            <label for="previousTotal">Previous total:</label>
             <input
               type="number"
               id="previousTotal"
@@ -158,6 +158,7 @@
               <th>Currency</th>
               <th>Amount</th>
               <th>In USD</th>
+              <th>In EUR</th>
               <th>In RSD</th>
             </tr>
           </thead>
@@ -261,11 +262,15 @@
                         <td>${inUsd.toLocaleString(undefined, {
                           minimumFractionDigits: 2,
                           maximumFractionDigits: 2,
-                        })} USD</td>
+                        })}</td>
+                        <td>${(inUsd * data.rates.EUR).toLocaleString(
+                          undefined,
+                          { minimumFractionDigits: 2, maximumFractionDigits: 2 }
+                        )}</td>
                         <td>${(inUsd * data.rates.RSD).toLocaleString(
                           undefined,
                           { minimumFractionDigits: 2, maximumFractionDigits: 2 }
-                        )} RSD</td>
+                        )}</td>
                     `;
             breakdownBody.appendChild(row);
           }
@@ -274,6 +279,13 @@
           const rsdRate = data.rates.RSD;
           if (!rsdRate) {
             displayError('Unexpected: RSD is not listed as a currency');
+            return;
+          }
+
+          // Check if EUR rate exists
+          const eurRate = data.rates.EUR;
+          if (!eurRate) {
+            displayError('Unexpected: EUR is not listed as a currency');
             return;
           }
 
@@ -335,12 +347,17 @@
 
           // Add total row to breakdown table
           const footerRow = document.createElement('tr');
+          const totalEur = totalUsd * data.rates.EUR;
           footerRow.innerHTML = `
                     <td colspan="2"><strong>TOTAL</strong></td>
                     <td><strong>${totalUsd.toLocaleString(undefined, {
                       minimumFractionDigits: 2,
                       maximumFractionDigits: 2,
                     })} USD</strong></td>
+                    <td><strong>${totalEur.toLocaleString(undefined, {
+                      minimumFractionDigits: 2,
+                      maximumFractionDigits: 2,
+                    })} EUR</strong></td>
                     <td><strong>${total.toLocaleString(undefined, {
                       minimumFractionDigits: 2,
                       maximumFractionDigits: 2,
