--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Currency Converter</title>
+    <title>Savings Nexus</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -103,7 +103,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Currency Converter</h1>
+      <h1>Savings Nexus</h1>
 
       <div>
         <label for="csvInput"
@@ -143,7 +143,7 @@
           </div>
         </div>
 
-        <button onclick="processInput()">Convert</button>
+        <button onclick="processInput()">Calculate</button>
       </div>
 
       <div id="result"></div>
